l2 agent api  & gc cycles
